src/fluxcd/infra/traefik/assets/ingresses.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${domain}`) && !Path(`/ping`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.${domain}`) && Path(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
  tls: {}
